# github-backup-automation-system

./: .gitignore  README.md  SECURITY.md  go.mod  main.go
agentic-observatory/: README.md  main.py  pyproject.toml  sample.env
agentic-observatory/agent/: __init__.py  openrouter.py  state.py
agentic-observatory/api_docs/: analytics_history.md  analytics_latest.md  analytics_run_1.md  backup_run_1.md  backups.md  backups_latest.md  dashboard_stats.md  logs.md  metrics.md  repos.md
agentic-observatory/clients/: go_backend.py
agentic-observatory/config/: settings.py
agentic-observatory/data/: fetch.py  go_backend.py  persistence.py
agentic-observatory/data/tools/: __init__.py  analytics.py  analytics.tools.py  backup.py  backup.tools.py  email.py  log.py  log.tools.py  repository.tools.py
agentic-observatory/utils/: constants.py  reports.py  response.py
backend/: README.md  main.go
backend/db/: postgres.db.go  postgres.go  run_status.db.go  schema.sql
backend/handlers/: ai.go  analytics.handler.go  backup.go  backup.handler.go  dashboard.handler.go  fix.handler.go  (+4 more)
config/: data.config.go
controller/: repo.controller.go
database/: failure_log.database.go  repo_hash.database.go  schema.database.go  sqlite.database.go
docs/: API_REFERENCE.md  GitHub Backup API.postman_collection.json  GitHub-Backup-API.postman_collection.json  GitHub-Backup-Environment.postman_environment.json  POSTMAN_SETUP.md  README.md
frontend/: .gitattributes  README.md  package.json  pnpm-lock.yaml
model/: config.model.go
service/: backup.service.go  process.service.go
(+94 files in other folders)
