[project]
name = "agentic-observatory"
version = "1.0.0"
description = "GitHub Backup Intelligence Platform"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "email-validator",
    "python-multipart",
    "python-dotenv",
    "langchain-openrouter",
    "SQLAlchemy>=2.0",
    "asyncpg",
    "python-jose[cryptography]",
    "Jinja2",
]
